[project]
name = "seedance2-comfyui-byteplus"
description = "ComfyUI nodes for BytePlus ModelArk Seedance 2.0 video generation with S3 reference video workflow support."
version = "1.4.3"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "numpy>=1.23.0",
    "opencv-python>=4.7.0",
    "boto3>=1.34.0",
]

[project.urls]
Repository = "https://github.com/nnnnkatsu/seedance2-comfyui-byteplus"

[tool.comfy]
PublisherId = "nnnnkatsu"
DisplayName = "Seedance2 ComfyUI BytePlus"
Icon = ""
